--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li>simulador de vuelo</li>
             <li>contador de calorias</li>
             <li>app para rutinas de gym</li>
+            <li>app de cronometro</li>
         </ol>
         <a href="https://github.com/fredd81">link a mi github</a>
         <img src="https://pic1.yitweb.co.il/cdn-cgi/image/f=auto,w=740,q=75/picserver/ynetespanol/crop_images/2022/04/12/rkb9wVSQ4q/rkb9wVSQ4q_0_0_490_490_0_large.jpg" alt="mi avatar de perrito">
