--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Punto de venta para dentistas </li>
         </ul>
         <ol>
-            <li>simulador de vuelo</li>
+            <li>simulador de manejo</li>
             <li>contador de calorias</li>
             <li>app para rutinas de gym</li>
             <li>app de cronometro</li>
